--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 project(Matrix)
 
 set(flags "-Werror -Wall -Wextra -pedantic")
-SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${flags}")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flags}")
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Matrix main.cpp matrix.cpp matrix.h)
